[gd_scene load_steps=17 format=3 uid="uid://bppxshnr13mp2"]

[ext_resource type="PackedScene" uid="uid://dnnmn2b7frbsx" path="res://Background/Background.tscn" id="1_2yolt"]
[ext_resource type="Shader" path="res://Background/Background.gdshader" id="2_x60gg"]
[ext_resource type="Texture2D" uid="uid://cyti5qao5cem4" path="res://Pixel Adventure/Background/Purple.png" id="3_nq60o"]
[ext_resource type="Script" path="res://Scene/Dead_UI.gd" id="4_p6utq"]
[ext_resource type="Texture2D" uid="uid://cegmobofqllr1" path="res://Pixel Adventure/Menu/Menu Label.png" id="4_xw0gi"]
[ext_resource type="FontFile" uid="uid://c2wanvx1fj75t" path="res://Fonts/Gorgeous Pixel.ttf" id="6_nvp1q"]
[ext_resource type="PackedScene" uid="uid://domgx4jehl8q1" path="res://ScoreBoard/score_board.tscn" id="7_vgd0s"]
[ext_resource type="AudioStream" uid="uid://dky7gc7jdudla" path="res://Audio/kenney_ui-audio/Audio/click4.ogg" id="8_5iqxx"]
[ext_resource type="AudioStream" uid="uid://dutpc30ax4gwu" path="res://Audio/Pickup_coin 25.wav" id="9_gwa0g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1bwfb"]
resource_local_to_scene = true
shader = ExtResource("2_x60gg")
shader_parameter/tileFactor = Vector2(8, 8)
shader_parameter/aspect_ratio = 1.0
shader_parameter/direction = Vector2(0, 1)
shader_parameter/speed = 0.1

[sub_resource type="Animation" id="Animation_hk10f"]
resource_name = "Pressed"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.203922, 0.203922, 0.203922, 1)]
}

[sub_resource type="Animation" id="Animation_7dkhd"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_asncg"]
_data = {
"Pressed": SubResource("Animation_hk10f"),
"RESET": SubResource("Animation_7dkhd")
}

[sub_resource type="Animation" id="Animation_ggfa3"]
resource_name = "Main->Score_Board"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-480, 0)]
}

[sub_resource type="Animation" id="Animation_6w4yc"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0b13x"]
_data = {
"Main->Score_Board": SubResource("Animation_ggfa3"),
"RESET": SubResource("Animation_6w4yc")
}

[node name="Background" instance=ExtResource("1_2yolt")]

[node name="Sprite2D" parent="ParallaxLayer" index="0"]
material = SubResource("ShaderMaterial_1bwfb")
texture = ExtResource("3_nq60o")

[node name="Control" type="Control" parent="." index="1"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Setting_UI" type="Control" parent="Control" index="0"]
layout_mode = 1
anchors_preset = 0
offset_right = 480.0
offset_bottom = 854.0
script = ExtResource("4_p6utq")

[node name="Submit_Button" type="TextureButton" parent="Control/Setting_UI" index="0"]
self_modulate = Color(0.54902, 0.384314, 0.764706, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -43.0
offset_right = 104.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(104, 36)
texture_normal = ExtResource("4_xw0gi")
stretch_mode = 0

[node name="Label" type="Label" parent="Control/Setting_UI/Submit_Button" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_nvp1q")
theme_override_font_sizes/font_size = 35
text = "Submit
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Setting_UI/Submit_Button" index="1"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_asncg")
}

[node name="Retry_Button" type="TextureButton" parent="Control/Setting_UI" index="1"]
self_modulate = Color(0, 0.882353, 0.470588, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 58.0
offset_right = 104.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(104, 36)
texture_normal = ExtResource("4_xw0gi")
stretch_mode = 0

[node name="Label" type="Label" parent="Control/Setting_UI/Retry_Button" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_nvp1q")
theme_override_font_sizes/font_size = 35
text = "Retry
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Setting_UI/Retry_Button" index="1"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_asncg")
}

[node name="Menu_Button" type="TextureButton" parent="Control/Setting_UI" index="2"]
self_modulate = Color(1, 0.8, 0.313726, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 131.0
offset_right = 104.0
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(104, 36)
texture_normal = ExtResource("4_xw0gi")
stretch_mode = 0

[node name="Label" type="Label" parent="Control/Setting_UI/Menu_Button" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -22.0
offset_right = 33.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_nvp1q")
theme_override_font_sizes/font_size = 35
text = "Menu
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Setting_UI/Menu_Button" index="1"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_asncg")
}

[node name="Score_Board_Button" type="TextureButton" parent="Control/Setting_UI" index="3"]
self_modulate = Color(0.341176, 0.592157, 1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 203.0
offset_right = 104.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(104, 36)
texture_normal = ExtResource("4_xw0gi")
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Setting_UI/Score_Board_Button" index="0"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_asncg")
}

[node name="Label" type="Label" parent="Control/Setting_UI/Score_Board_Button" index="1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -22.0
offset_right = 33.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_nvp1q")
theme_override_font_sizes/font_size = 30
text = "SCORE BOARD
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Quit_Button" type="TextureButton" parent="Control/Setting_UI" index="4"]
self_modulate = Color(1, 0.298039, 0.509804, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 275.0
offset_right = 104.0
offset_bottom = 347.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(104, 36)
texture_normal = ExtResource("4_xw0gi")
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Setting_UI/Quit_Button" index="0"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_asncg")
}

[node name="Label" type="Label" parent="Control/Setting_UI/Quit_Button" index="1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_nvp1q")
theme_override_font_sizes/font_size = 35
text = "Quit
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Control/Setting_UI" index="5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -201.0
offset_right = 44.5
offset_bottom = -175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_nvp1q")
theme_override_font_sizes/font_size = 80
text = "Final Score:
250
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score_Board" parent="Control/Setting_UI" index="6" instance=ExtResource("7_vgd0s")]
layout_mode = 1
offset_left = 480.0
offset_right = 480.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Setting_UI" index="7"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_0b13x")
}

[node name="LineEdit" type="LineEdit" parent="Control/Setting_UI" index="8"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -135.126
offset_top = -520.0
offset_right = 134.874
offset_bottom = -470.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_nvp1q")
placeholder_text = "Your name"

[node name="Button_Audio" type="AudioStreamPlayer2D" parent="Control/Setting_UI" index="9"]
stream = ExtResource("8_5iqxx")

[node name="Submit_Audio" type="AudioStreamPlayer2D" parent="Control/Setting_UI" index="10"]
stream = ExtResource("9_gwa0g")

[connection signal="button_down" from="Control/Setting_UI/Submit_Button" to="Control/Setting_UI" method="_on_submit_button_button_down"]
[connection signal="button_up" from="Control/Setting_UI/Submit_Button" to="Control/Setting_UI" method="_on_submit_button_button_up"]
[connection signal="button_down" from="Control/Setting_UI/Retry_Button" to="Control/Setting_UI" method="_on_retry_button_button_down"]
[connection signal="button_up" from="Control/Setting_UI/Retry_Button" to="Control/Setting_UI" method="_on_retry_button_button_up"]
[connection signal="button_down" from="Control/Setting_UI/Menu_Button" to="Control/Setting_UI" method="_on_menu_button_button_down"]
[connection signal="button_up" from="Control/Setting_UI/Menu_Button" to="Control/Setting_UI" method="_on_menu_button_button_up"]
[connection signal="button_down" from="Control/Setting_UI/Score_Board_Button" to="Control/Setting_UI" method="_on_score_board_button_button_down"]
[connection signal="button_up" from="Control/Setting_UI/Score_Board_Button" to="Control/Setting_UI" method="_on_score_board_button_button_up"]
[connection signal="button_down" from="Control/Setting_UI/Quit_Button" to="Control/Setting_UI" method="_on_quit_button_button_down"]
[connection signal="button_up" from="Control/Setting_UI/Quit_Button" to="Control/Setting_UI" method="_on_quit_button_button_up"]
